--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
         "express": "^4.16.3",
         "express-history-api-fallback": "^2.2.1",
         "express-static-gzip": "^0.3.2",
+        "fastify": "^1.5.0",
+        "fastify-compress": "^0.6.0",
+        "fastify-static": "^0.12.0",
         "helmet": "^3.12.1",
         "html-webpack-plugin": "^3.2.0",
         "http-proxy": "^1.17.0",
