--- a/package.json
+++ b/package.json
@@ -15,43 +15,43 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "autoprefixer": "^8.6.2",
-        "babel-core": "^6.26.3",
-        "babel-loader": "^7.1.4",
+        "@babel/core": "^7.1.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+        "@babel/preset-env": "^7.1.0",
+        "autoprefixer": "^9.1.5",
+        "babel-loader": "^8.0.2",
         "babel-minify-webpack-plugin": "^0.3.1",
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.7.0",
-        "babel-preset-stage-3": "^6.24.1",
         "body-parser": "^1.18.3",
         "brotli-webpack-plugin": "^1.0.0",
-        "compression-webpack-plugin": "^1.1.11",
-        "css-loader": "^0.28.11",
+        "compression-webpack-plugin": "^2.0.0",
+        "css-loader": "^1.0.0",
         "express": "^4.16.3",
         "express-history-api-fallback": "^2.2.1",
-        "express-static-gzip": "^0.3.2",
-        "helmet": "^3.12.1",
+        "express-static-gzip": "^1.1.3",
+        "helmet": "^3.13.0",
         "html-webpack-plugin": "^3.2.0",
         "http-proxy": "^1.17.0",
-        "iltorb": "^2.3.2",
-        "less": "^3.0.4",
+        "iltorb": "^2.4.0",
+        "less": "^3.8.1",
         "less-loader": "^4.1.0",
         "npm-run-all": "^4.1.3",
-        "postcss-loader": "^2.1.5",
+        "postcss-loader": "^3.0.0",
         "spdy": "^3.4.7",
         "sw-precache-webpack-plugin": "^0.11.5",
-        "vue": "^2.5.16",
-        "vue-loader": "^15.2.4",
+        "vue": "^2.5.17",
+        "vue-loader": "^15.4.2",
         "vue-router": "^3.0.1",
-        "vue-server-renderer": "^2.5.16",
-        "vue-style-loader": "^4.1.0",
-        "vue-template-compiler": "^2.5.16",
+        "vue-server-renderer": "^2.5.17",
+        "vue-style-loader": "^4.1.2",
+        "vue-template-compiler": "^2.5.17",
         "vuex": "^3.0.1",
-        "webpack": "^4.12.0",
-        "webpack-build-notifier": "^0.1.27",
-        "webpack-cli": "^3.0.3",
-        "webpack-dev-middleware": "^3.1.3",
-        "webpack-hot-middleware": "^2.22.2",
+        "webpack": "^4.20.2",
+        "webpack-build-notifier": "^0.1.29",
+        "webpack-cli": "^3.1.1",
+        "webpack-dev-middleware": "^3.4.0",
+        "webpack-hot-middleware": "^2.24.2",
         "webpack-visualizer-plugin": "^0.1.11"
     }
 }
