--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "private": true,
     "dependencies": {
         "@babel/core": "^7.1.2",
         "@babel/plugin-syntax-dynamic-import": "^7.0.0",
@@ -21,7 +22,6 @@
         "autoprefixer": "^9.3.1",
         "babel-loader": "^8.0.2",
         "babel-minify-webpack-plugin": "^0.3.1",
-        "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "babel-polyfill": "^6.26.0",
         "body-parser": "^1.18.3",
         "brotli-webpack-plugin": "^1.0.0",
