--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "postcss-loader": "^3.0.0",
         "sw-precache-webpack-plugin": "^0.11.5",
         "vue": "^2.5.17",
+        "vue-analytics": "^5.16.1",
         "vue-loader": "^15.4.2",
         "vue-router": "^3.0.2",
         "vue-server-renderer": "^2.5.17",
