--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "pack-production": "run-p pack-client-production pack-server-production",
         "pack-client-production": "NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
         "pack-server-production": "NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-        "clean": "rm dist/*"
+        "clean": "rm dist/*",
+        "bare": "NODE_ENV=production node server/bare_server.js"
     },
     "keywords": [],
     "author": "",
