--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@babel/core": "^7.1.6",
         "@babel/plugin-syntax-dynamic-import": "^7.0.0",
         "@babel/preset-env": "^7.1.6",
+        "accepts": "^1.3.5",
         "autoprefixer": "^9.3.1",
         "babel-loader": "^8.0.2",
         "babel-minify-webpack-plugin": "^0.3.1",
